# WST-Windows-Subsystem-for-TTY

./: Cargo.toml  LICENSE  README.md  test_ps.ps1  wst.toml  wst_debug.txt
apps/wst-ui/: Cargo.toml
apps/wst-ui/src/: builtin.rs  main.rs
crates/wst-backend/: Cargo.toml
crates/wst-backend/src/: lib.rs
crates/wst-config/: Cargo.toml
crates/wst-config/src/: lib.rs
crates/wst-core/: Cargo.toml
crates/wst-core/src/: lib.rs
crates/wst-daemon/: Cargo.toml
crates/wst-daemon/src/: hotkey.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs
crates/wst-hotkey/: Cargo.toml
crates/wst-hotkey/src/: lib.rs
crates/wst-protocol/: Cargo.toml
crates/wst-protocol/src/: lib.rs
crates/wst-session/: Cargo.toml
crates/wst-session/src/: lib.rs  manager.rs  session.rs  store.rs
docs/: Claude_工作规范与验收标准_WST项目.md  WST_白皮书_初稿.md  WST_白皮书_增强版.md  architecture.md  backend.md  roadmap.md  terminal-copy-fix.md
native/include/: wst_native.h
native/wst_native/: CMakeLists.txt
native/wst_native/src/: wst_native.c
tools/: run.ps1
