[workspace]
resolver = "2"
members = [
    "apps/wst-ui",
    "crates/wst-core",
    "crates/wst-backend",
    "crates/wst-protocol",
    "crates/wst-config",
    "crates/wst-hotkey",
    "crates/wst-session",
    "crates/wst-daemon",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Chen 430"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Diagnostics_ToolHelp"] }
winput = "0.2"
