[package]
name = "wst-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true

wst-core = { path = "../../crates/wst-core" }
wst-config = { path = "../../crates/wst-config" }
wst-protocol = { path = "../../crates/wst-protocol" }
wst-backend = { path = "../../crates/wst-backend" }
wst-hotkey = { path = "../../crates/wst-hotkey" }
