[package]
name = "wst-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wst-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wst-protocol = { path = "../wst-protocol" }
wst-config = { path = "../wst-config" }
wst-session = { path = "../wst-session" }
wst-hotkey = { path = "../wst-hotkey" }
wst-backend = { path = "../wst-backend" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Pipes",
] }
interprocess = "2.2"
